--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/SendBox.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/SendBox.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MessageViewModel>
+﻿@model List<AdminMessageViewModel>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -37,25 +37,6 @@
                     <!-- /.card-header -->
                     <div class="card-body p-0">
                         <div class="mailbox-controls">
-                            <!-- Check all button -->
-                            <button type="button" class="btn btn-default btn-sm checkbox-toggle">
-                                <i class="far fa-square"></i>
-                            </button>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default btn-sm">
-                                    <i class="far fa-trash-alt"></i>
-                                </button>
-                                <button type="button" class="btn btn-default btn-sm">
-                                    <i class="fas fa-reply"></i>
-                                </button>
-                                <button type="button" class="btn btn-default btn-sm">
-                                    <i class="fas fa-share"></i>
-                                </button>
-                            </div>
-                            <!-- /.btn-group -->
-                            <button type="button" class="btn btn-default btn-sm">
-                                <i class="fas fa-sync-alt"></i>
-                            </button>
                             <div class="float-right">
                                 1-50/200
                                 <div class="btn-group">
@@ -83,7 +64,7 @@
                                                 </div>
                                             </td>
                                             <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a a asp-area="Admin" asp-controller="Message" asp-action="GetSendBoxMessageDetails" asp-route-id="@item.Id">@item.ReceiverMail</a></td>
+                                            <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetSendBoxMessageDetails" asp-route-id="@item.Id">@item.ReceiverMail</a></td>
                                             <td class="mailbox-subject">
                                                 <b>@item.Subject</b> - @item.Content.Substring(0, 30)...
                                             </td>
