--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_ScriptsPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_ScriptsPartial.cshtml
@@ -10,4 +10,6 @@
 
 <!-- AdminLTE App -->
 <script src="~/admin/dist/js/adminlte.js"></script>
+<script type="text/javascript" src="~/jquery-validate/jquery.validate.min.js"></script>
+<script type="text/javascript" src="~/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
