--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_SummerNotePartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_SummerNotePartial.cshtml
@@ -9,6 +9,9 @@
 <script>
     $(function () {
         //Add text editor
-        $('#compose-textarea').summernote()
+        $('#compose-textarea').summernote({
+            height:200
+        })
+        
     })
 </script>
