--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/ForgotPassword.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/ForgotPassword.cshtml
@@ -37,9 +37,7 @@
 
          
                 <p class="mb-0 mt-3">
-                    <a asp-area=""
-                    asp-controller="Account"
-                    asp-action="Login"
+                    <a asp-area="" asp-controller="Account" asp-action="Login"
                     class="text-center">Önceki Sayfaya Geri Dön</a>
                 </p>
             </div>
