--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Contact/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Contact/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ContactViewModel>
+﻿@model List<UserMessageViewModel>
  <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -15,8 +15,7 @@
     <!-- Main content -->
     <section class="content">
         <div class="row">
-           @await Html.PartialAsync("_MessageBoxLeftSidePartialView")
-            <!-- /.col -->
+@await Html.PartialAsync("_MessaggeBoxLeftSidePartialView")
             <div class="col-md-9">
                 <div class="card card-primary card-outline">
                     <div class="card-header">
@@ -71,7 +70,7 @@
                                                 <b>@item.Subject</b> - @item.Content.Substring(0,30)...
                                             </td>
                                             <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">@item</td>
+                                            <td class="mailbox-date">@item.MessageDate</td>
                                         </tr>
                                     }
                              
