--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetUserMessageDetails.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetUserMessageDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model AdminMessageViewModel
+﻿@model UserMessageViewModel
 
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
@@ -14,8 +14,6 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-
-
 
                 @await Html.PartialAsync("_MessageBoxLeftSidePartialView")
 
@@ -33,7 +31,9 @@
                                 <h5>Konu: @Html.DisplayFor(x => x.Subject)</h5>
                                 <br />
                                 <h6>
-                                    Alıcı: @Html.DisplayFor(x => x.SenderMail)
+                                    Gönderici: @Html.DisplayFor(x => x.UserMail)
+                                  
+
                                 </h6>
                             </div>
 
