--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MessageViewModel>
+﻿@model AllMessagesViewModel
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -73,26 +73,48 @@
                         <div class="table-responsive mailbox-messages">
                             <table class="table table-hover table-striped">
                                 <tbody>
-                                    @foreach (var item in Model)
+                                    @if (Model.UserMessages != null && Model.UserMessages.Any())
                                     {
-                                        <tr>
-                                            <td>
-                                                <div class="icheck-primary">
-                                                    <input type="checkbox" value="" id="check1">
-                                                    <label for="check1"></label>
-                                                </div>
-                                            </td>
-                                            <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetInboxMessageDetails" asp-route-id="@item.Id">@item.SenderMail</a></td>
-                                            <td class="mailbox-subject">
-                                                <b>@item.Subject</b> - @item.Content.Substring(0, 30)...
-                                            </td>
-                                            <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">@item.MessageDate</td>
-                                        </tr>
+                                        @foreach (var userMessage in Model.UserMessages)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <div class="icheck-primary">
+                                                        <input type="checkbox" value="" id="check1">
+                                                        <label for="check1"></label>
+                                                    </div>
+                                                </td>
+                                                <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
+                                                <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetUserMessageDetails" asp-route-id="@userMessage.Id">@userMessage.UserMail</a></td>
+                                                <td class="mailbox-subject">
+                                                    <b>@userMessage.Subject</b> - @userMessage.Content.Substring(0, 30)...
+                                                </td>
+                                                <td class="mailbox-attachment"></td>
+                                                <td class="mailbox-date">@userMessage.MessageDate</td>
+                                            </tr>
+                                        }
                                     }
-
-
+                                    @if (Model.AdminMessages != null && Model.AdminMessages.Any())
+                                    {
+                                        @foreach (var adminMessage in Model.AdminMessages)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <div class="icheck-primary">
+                                                        <input type="checkbox" value="" id="check1">
+                                                        <label for="check1"></label>
+                                                    </div>
+                                                </td>
+                                                <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
+                                                <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetAdminMessageDetails" asp-route-id="@adminMessage.Id">@adminMessage.SenderMail</a></td>
+                                                <td class="mailbox-subject">
+                                                    <b>@adminMessage.Subject</b> - @adminMessage.Content.Substring(0, 30)...
+                                                </td>
+                                                <td class="mailbox-attachment"></td>
+                                                <td class="mailbox-date">@adminMessage.MessageDate</td>
+                                            </tr>
+                                        }
+                                    }
                                 </tbody>
                             </table>
                             <!-- /.table -->
