--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_MessageBoxLeftSidePartialView.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_MessageBoxLeftSidePartialView.cshtml
@@ -15,14 +15,20 @@
         <div class="card-body p-0">
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item active">
-                    <a asp-area="Admin" asp-controller="Contact" asp-action="Index" class="nav-link">
-                        <i class="fas fa-mail-bulk"></i> İletişim Mesajları
-                        <span class="badge bg-primary float-right">0</span>
+                    <a asp-area="Admin" asp-controller="Message" asp-action="Index" asp-route-messageType="All" class="nav-link">
+                        <i class="fas fa-inbox"></i> Tüm Mesajlar
+                        <span class="badge bg-primary float-right">12</span>
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a asp-area="Admin" asp-controller="Message" asp-action="Inbox" class="nav-link">
-                        <i class="fas fa-inbox"></i> Gelen Mesajlar
+                    <a asp-area="Admin" asp-controller="Message" asp-action="Index" asp-route-messageType="User" class="nav-link">
+                        <i class="fas fa-inbox"></i> Kullanıcı Mesajları
+                        <span class="badge bg-primary float-right">12</span>
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a asp-area="Admin" asp-controller="Message" asp-action="Index" asp-route-messageType="Admin" class="nav-link">
+                        <i class="fas fa-inbox"></i> Yönetici Mesajları
                         <span class="badge bg-primary float-right">12</span>
                     </a>
                 </li>
@@ -31,7 +37,7 @@
                         <i class="far fa-envelope"></i> Gönderilen Mesajlar
                     </a>
                 </li>
-               
+
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="far fa-trash-alt"></i> Çöp Kutusu
@@ -77,3 +83,4 @@
     </div>
     <!-- /.card -->
 </div>
+<!-- /.col -->
