--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
@@ -181,14 +181,6 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="pages/gallery.html" class="nav-link">
-                        <i class="fas fa-cog"></i>
-                        <p>
-                            Ayarlar
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
                     <a href="/" class="nav-link">
                         <i class="fas fa-undo-alt"></i>
                         <p>
@@ -198,11 +190,9 @@
                 </li>
                 <li class="nav-item">
                     <!--logout sayfasına yönlendireceğim.-->
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">
+                    <a asp-area="" asp-controller="Account" asp-action="Logout" class="nav-link">
                         <i class="fas fa-sign-out-alt"></i>
-                        <p>
-                            Çıkış Yap
-                        </p>
+                        <p> Çıkış Yap</p>
                     </a>
                 </li>
             </ul>
