--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/SendBox.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/SendBox.cshtml
@@ -56,6 +56,7 @@
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
+                                        
                                         <tr>
                                             <td>
                                                 <div class="icheck-primary">
@@ -66,7 +67,7 @@
                                             <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
                                             <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetSendBoxMessageDetails" asp-route-id="@item.Id">@item.ReceiverMail</a></td>
                                             <td class="mailbox-subject">
-                                                <b>@item.Subject</b> - @item.Content.Substring(0, 30)...
+                                                <b>@item.Subject</b> -  @(item.Content.Length > 30 ? $"{item.Content.Substring(0, 30)}..." : item.Content)
                                             </td>
                                             <td class="mailbox-attachment"></td>
                                             <td class="mailbox-date">@item.MessageDate</td>
