--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_MessageBoxLeftSidePartialView.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_MessageBoxLeftSidePartialView.cshtml
@@ -14,12 +14,7 @@
         </div>
         <div class="card-body p-0">
             <ul class="nav nav-pills flex-column">
-                <li class="nav-item active">
-                    <a asp-area="Admin" asp-controller="Message" asp-action="Index" asp-route-messageType="All" class="nav-link">
-                        <i class="fas fa-inbox"></i> Tüm Mesajlar
-                        <span class="badge bg-primary float-right">12</span>
-                    </a>
-                </li>
+                @await Component.InvokeAsync("MessageCount")
                 <li class="nav-item active">
                     <a asp-area="Admin" asp-controller="Message" asp-action="Index" asp-route-messageType="User" class="nav-link">
                         <i class="fas fa-inbox"></i> Kullanıcı Mesajları
