--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/ShowResetPasswordInfo.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/ShowResetPasswordInfo.cshtml
@@ -11,7 +11,7 @@
     <!-- /.login-logo -->
 
 
-        <h3 class="text-center">Şifreniz Gönderildi</h3>
+        <h3 class="text-center">Link Gönderildi</h3>
         <h5 class="text-center">@Model.Email adresine şifre yenileme linkiniz gönderildi.</h5>
 
    
@@ -30,7 +30,7 @@
                     <li> Girdiğiniz e-posta adresinin doğruluğunu kontrol ediniz.</li>
                 </ul>
 
-                <a asp-area="" asp-controller="Account" asp-action="ForgotPassword" class="btn btn-block btn-outline-secondary">
+                <a asp-area="" asp-controller="Account" asp-action="Register" class="btn btn-block btn-outline-secondary">
                    Önceki Sayfaya Geri Dön</a>
                
                     
