--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_MessageBoxLeftSidePartialView.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_MessageBoxLeftSidePartialView.cshtml
@@ -34,7 +34,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a asp-area="Admin" asp-controller="Message" asp-action="TrashMessages" class="nav-link">
                         <i class="far fa-trash-alt"></i> Çöp Kutusu
                     </a>
                 </li>
