--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/ShowMemberShipConfirmInfo.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/ShowMemberShipConfirmInfo.cshtml
@@ -12,7 +12,7 @@
     <!-- /.login-logo -->
 
 
-    <h3 class="text-center">Şifreniz Gönderildi</h3>
+    <h3 class="text-center">Link Gönderildi</h3>
     <h5 class="text-center">@email adresine üyelik kaydı oluşturma linkiniz gönderildi.</h5>
 
 
@@ -31,7 +31,7 @@
                     <li> Girdiğiniz e-posta adresinin doğruluğunu kontrol ediniz.</li>
                 </ul>
 
-                <a asp-area="" asp-controller="Account" asp-action="Register" class="btn btn-block btn-outline-secondary">
+                <a asp-area="" asp-controller="Account" asp-action="ForgotPassword" class="btn btn-block btn-outline-secondary">
                     Önceki Sayfaya Geri Dön
                 </a>
 
